fixed link alignment

--- a/src/app/core/layout/main-nav/main-nav.component.scss
+++ b/src/app/core/layout/main-nav/main-nav.component.scss
@@ -40,3 +40,8 @@ $primary: mat-palette($mat-grey, 400);
 .example-fill-remaining-space {
   flex: 1 1 auto;
 }
+
+.link a {
+  width: 120px;
+display: flex;
+}
